kubernetes/apps/sparkyfitness/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: sparkyfitness
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
